--- a/khoBlog/templates/tailwind/changelog.html
+++ b/khoBlog/templates/tailwind/changelog.html
@@ -9,7 +9,7 @@
           <div class="relative flex items-start space-x-3">
             <div>
               <div class="relative pl-3 pr-1">
-                <div class="h-4 w-4 bg-gray-200 dark:bg-jumbo-700 rounded-full ring-8 ring-gray-50 dark:ring-jumbo-800 flex items-center justify-center"></div>
+                <div class="size-4 bg-gray-200 dark:bg-jumbo-700 rounded-full ring-8 ring-gray-50 dark:ring-jumbo-800 flex items-center justify-center"></div>
               </div>
             </div>
             <div class="min-w-0 flex-1 pb-1.5">
@@ -25,7 +25,7 @@
                   <div class="relative">
                     <a class="absolute top-6 text-xs text-cornflower-600 hover:underline dark:text-cornflower-200" href="{% url 'blog:post_category_list' slug='updates' %}">
                       Read changelog
-                      {% heroicon_mini 'arrow-long-right' class="h-4 w-4 inline" stroke_width=2 %}
+                      {% heroicon_mini 'arrow-long-right' class="size-4 inline" stroke_width=2 %}
                     </a>
                   </div>
                 {% endif %}
